--- a/R/3-generating-datasets.Rmd
+++ b/R/3-generating-datasets.Rmd
@@ -34,18 +34,16 @@ It makes sense to make randomly generated datasets under my three scenarios **on
 2. Correlated variables are not predictive ("red herring")
     - no discriminating variables
     - 5 variables with cov = 0
-    - 10 variables with cov = 0.5 (axis 1)
-    - 10 variables with cov = 0.2 (axis 2)
+    - two groups of 10 variables with cov = 0.5
 
 3. Correlated variables are predictive ("control")
     - 5 variables with cov = 0
     - 10 variables that discriminate between groups with difference in means of 2 and cov = 0.5 (axis 1)
-    - 10 variables with cov = 0.2 (but not discriminating) (axis 2)
+    - 10 variables with cov = 0.5 (but not discriminating) (axis 2)
     
 4. Predictive variables are not correlated ("needle in a haystack")
     - 5 variables that discriminate between groups with a difference in means of 2, cov = 0
-    - 10 variables with cov = 0.5
-    - 10 variables with cov = 0.2
+    - two groups of 10 variables with cov = 0.5
 
 
 # Simulate Data
@@ -88,7 +86,7 @@ herring <-
              ~sim_cat(n_obs = 20, n_groups = 2) %>% 
                sim_covar(n_vars = 5, var = 1, cov = 0, name = "N") %>% 
                sim_covar(n_vars = 10, var = 1, cov = 0.5, name = "C1") %>% 
-               sim_covar(n_vars = 10, var = 1, cov = 0.2, name = "C2")
+               sim_covar(n_vars = 10, var = 1, cov = 0.5, name = "C2")
   ) %>% 
   set_names(paste0("herring_df_", 1:500))
 
@@ -115,7 +113,7 @@ control <-
                sim_covar(n_vars = 5, var = 1, cov = 0, name = "N") %>% 
                group_by(group) %>% 
                sim_discr(n_vars = 10, var = 1, cov = 0.5, group_means = c(-1, 1), name = "D1") %>% 
-               sim_discr(n_vars = 10, var = 1, cov = 0.2, group_means = c(-1, 1), name = "D2") %>% 
+               sim_discr(n_vars = 10, var = 1, cov = 0.5, group_means = c(-1, 1), name = "D2") %>% 
                ungroup()
   ) %>% 
   set_names(paste0("control_df_", 1:500))
@@ -132,9 +130,7 @@ control[[sample(1:500, 1)]] %>%
 ```
 
 ## 4. Predictive variables are not correlated ("needle in a haystack")
-   - 5 variables that discriminate between groups with a difference in means of 2, cov = 0
-    - 10 variables with cov = 0.5
-    - 10 variables with cov = 0.2
+
 
 Needle:
 
@@ -144,7 +140,7 @@ needle <-
   future_map(1:500,
       ~ sim_cat(n_obs = 20, n_groups = 2) %>% 
         sim_covar(n_vars = 10, var = 1, cov = 0.5, name = "C1") %>% 
-        sim_covar(n_vars = 10, var = 1, cov = 0.2, name = "C2") %>% 
+        sim_covar(n_vars = 10, var = 1, cov = 0.5, name = "C2") %>% 
         group_by(group) %>% 
         sim_discr(n_vars = 5, var = 1, cov = 0, group_means = c(-1, 1), name = "D") %>% 
         ungroup()
