--- a/R/3-generating-datasets.Rmd
+++ b/R/3-generating-datasets.Rmd
@@ -10,8 +10,9 @@ library(tidyverse)
 library(here)
 library(furrr)
 myseed <- 258
+#set up parallelization
+plan(multiprocess)
 ```
-
 **IMPORTANT:** These datasets were generated under R version 3.6.1.  The random number generator in R was updated in version 3.6.0.  For this to be fully reproducible, run with version > 3.6.0.
 
 **NOTE:** This script used the `furrr` package which adds parallelization support to `map()` and other functions from the `purrr` package.  If your machine doesn't support parallelization, or you run into problems, you can replace `future_map()` with `map()`.
@@ -38,21 +39,14 @@ It makes sense to make randomly generated datasets under my three scenarios **on
 
 3. Correlated variables are predictive ("control")
     - 5 variables with cov = 0
-    - 10 variables that discriminate between groups with difference in means of 2 and cov = 0.5 (axis 1)
-    - 10 variables with cov = 0.5 (but not discriminating) (axis 2)
-    
+    - two groups of 10 variables that discriminate between groups with difference in means of 2 and cov = 0.5 
+
 4. Predictive variables are not correlated ("needle in a haystack")
     - 5 variables that discriminate between groups with a difference in means of 2, cov = 0
     - two groups of 10 variables with cov = 0.5
 
 
 # Simulate Data
-
-Set up parallelization
-
-```{r include=FALSE}
-plan(multiprocess)
-```
 
 ## 1. NULL
 
@@ -113,7 +107,7 @@ control <-
                sim_covar(n_vars = 5, var = 1, cov = 0, name = "N") %>% 
                group_by(group) %>% 
                sim_discr(n_vars = 10, var = 1, cov = 0.5, group_means = c(-1, 1), name = "D1") %>% 
-               sim_discr(n_vars = 10, var = 1, cov = 0.5, group_means = c(-1, 1), name = "D2") %>% 
+               sim_discr(n_vars = 10, var = 1, cov = 0.5, group_means = c(1, -1), name = "D2") %>% 
                ungroup()
   ) %>% 
   set_names(paste0("control_df_", 1:500))
