re-do kappa coefficient with new scenarios.

--- a/R/7-kappa-coef.Rmd
+++ b/R/7-kappa-coef.Rmd
@@ -15,6 +15,9 @@ library(here)
 library(cowplot)
 library(colorspace)
 source(here("R", "ropls_helpers.R"))
+# for parallelization
+library(furrr)
+plan("multiprocess")
 ```
 
 
@@ -90,6 +93,9 @@ needle.pls <- read_rds(here('data', 'models', 'needle-pls.rds'))
 ```
 
 # Functions
+```{r}
+source(here("R", "kappa.R"))
+```
 
 `conf_pcr()` creates a confusion matrix for PCA regression models.  It classifies a variable as being "important" if it is significantly correlated to any of the PCA axes that were significant predictors in the regression.
 
@@ -99,91 +105,6 @@ needle.pls <- read_rds(here('data', 'models', 'needle-pls.rds'))
 
 `calc_kappa()` takes the results of `conf_pcr()` or `conf_pls()` and calculates Cohen's Kappa based on a confusion matrix.
 
-```{r}
-conf_pcr <- function(pcr){
-  # Separate PCA and regression parts
-  pca <- pcr$pca
-  reg <- pcr$glm
-  
-  # Which PCs were significant in the regression?
-  pcs <- reg %>% 
-    car::Anova() %>% 
-    broom::tidy() %>% 
-    filter(p.value < 0.05 & term != "(Intercept)") %>% 
-    .$term %>%
-    syms() #saves as expression for later unquoting with !!!
-  
-  #get scores and data from PCA part of model
-  scores <- pca %>%
-    get_scores() %>%
-    select(!!!pcs)
-  
-  data <- pcr$pca@suppLs$xModelMN
-
-  #figure out appropriate cutoff by solving for the r that gives p < 0.05 given n
-  n = pca@descriptionMC[1,1] %>% as.numeric()
-  t = qt(0.05, n)
-  r = sqrt(-(t^2)/(-t^2 - n + 2)) #solved t stat calculation for r
-  
-  #create confusion matrix
-  #variables are detected as discriminating if they have significant correlation with significant PCs
-  cor(scores, data) %>%
-    t() %>%
-    as_tibble(rownames = "Variable") %>% 
-    mutate_if(is.numeric, funs(abs(.) > r)) %>% 
-    rowwise() %>% 
-    mutate(detect_discr = any(!!!pcs),
-           is_discr = str_detect(Variable, "D"))
-}
-
-```
-
-```{r}
-conf_pls <- function(pls){
-  #get scores and data
-  scores <- pls %>%
-    get_scores() %>% 
-    select(-y1, -sample) #just keep significant predictive axes columns
-  
-  #get predictive axis names
-  predcomps <- colnames(scores) %>% syms()
-  
-  data <- pls@suppLs$xModelMN
-  
-  #figure out appropriate cutoff by solving for the r that gives p < 0.05 given n
-  
-  n = pls@descriptionMC[1,1] %>% as.numeric()
-  t = qt(0.05, n)
-  r = sqrt(-(t^2)/(-t^2 - n + 2)) #solved t stat calculation for r
-  
-  cor(scores, data) %>%
-    t() %>%
-    as_tibble(rownames = "Variable") %>% 
-    mutate_if(is.numeric, list(~abs(.) > r)) %>% 
-    rowwise() %>% 
-    mutate(detect_discr = any(!!!predcomps),
-           is_discr = str_detect(Variable, "D"))
-}
-```
-
-```{r}
-conf_pls_vip <- function(pls.model){
-  get_VIP(pls.model) %>%
-    mutate(detect_discr = ifelse(VIP > 1, TRUE, FALSE),
-           is_discr = ifelse(str_detect(Variable, "D"), TRUE, FALSE))
-}
-```
-
-```{r}
-calc_kappa <- function(confusion_df) {
-  confusion_df %>% 
-    select(detect_discr, is_discr) %>%
-    as.matrix() %>%
-    cohen.kappa() %>%
-    .$kappa %>% 
-    data_frame(kappa = .)
-}
-```
 
 
 # Control
@@ -194,8 +115,8 @@ calc_kappa <- function(confusion_df) {
 ```{r message=FALSE, warning=FALSE}
 control.pca.k <-
   control.pcas %>%
-  map(conf_pcr) %>%
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pcr) %>%
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pca.k = "kappa")
 ```
 
@@ -205,14 +126,14 @@ control.pca.k <-
 ```{r message=FALSE, warning=FALSE}
 control.pls.k <-
   control.pls %>% 
-  map(conf_pls) %>% 
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pls) %>% 
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pls.k = "kappa")
 
 control.pls.VIP.k <-
   control.pls %>% 
-  map(conf_pls_vip) %>% 
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pls_vip) %>% 
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pls.VIP.k = "kappa")
 ```
 
@@ -239,7 +160,7 @@ control.k.plotdata <-
 control.p <-
   ggplot(control.k.plotdata) +
   geom_density(aes(x = `Cohen's Kappa`, fill = Method, linetype = Method),
-               alpha = 0.5, trim = TRUE, adjust = 1.5) +
+               alpha = 0.5, trim = TRUE, adjust = 4) +
   scale_fill_discrete_qualitative(palette = "Dark 3") +
   scale_linetype_manual(values = c(1,2,3)) +
   theme_bw() +
@@ -258,8 +179,8 @@ control.p
 ```{r message=FALSE, warning=FALSE}
 needle.pca.k <-
   needle.pcas %>%
-  map(conf_pcr) %>%
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pcr) %>%
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pca.k = "kappa")
 ```
 
@@ -269,14 +190,14 @@ needle.pca.k <-
 ```{r message=FALSE, warning=FALSE}
 needle.pls.k <-
   needle.pls %>%
-  map(conf_pls) %>%
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pls) %>%
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pls.k = "kappa")
 
 needle.pls.VIP.k <-
   needle.pls %>% 
-  map(conf_pls_vip) %>% 
-  map_df(calc_kappa, .id = "dataset") %>% 
+  future_map(conf_pls_vip) %>% 
+  future_map_dfr(calc_kappa, .id = "dataset") %>% 
   rename(pls.VIP.k = "kappa")
 ```
 
@@ -303,7 +224,7 @@ needle.k.plotdata <-
 needle.p <-
   ggplot(needle.k.plotdata) +
   geom_density(aes(x = `Cohen's Kappa`, fill = Method, linetype = Method),
-               alpha = 0.5, trim = TRUE, adjust = 1.5) +
+               alpha = 0.5, trim = TRUE, adjust = 4) +
   scale_fill_discrete_qualitative(palette = "Dark 3") +
   scale_linetype_manual(values = c(1,2,3)) +
   theme_bw() +
